mooncake/tests/ui/fails/01-methods.stderr
error: custom attribute panicked
  --> tests/ui/fails/01-methods.rs:11:5
   |
11 |     #[mooncake]
   |     ^^^^^^^^^^^
   |
   = help: message: methods are currently unsupported
